[gd_scene load_steps=2 format=3 uid="uid://0m67dr12wpjy"]

[ext_resource type="Script" uid="uid://bn2qmr2e8qn2n" path="res://Scripts/Interface/GameOver/game_over_ui.gd" id="1_script"]

[node name="GameOverUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.39215687)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 120
text = "GAME OVER"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="ScoreLabel" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 50
text = "Final Score: 0"
horizontal_alignment = 1

[node name="Restart" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "RESTART"

[node name="Menu" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "MENU"

[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/Menu" to="." method="_on_menu_pressed"]
